--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		<button data-ns-test='block-inline-button'></button>
+		<div data-ns-test='block-inline-div'></div>
+		<span data-ns-test='block-inline-span'></span>
+		<p data-ns-test='block-inline-p'></p>
+		<input data-ns-test='block-inline-input' />
+		<cite data-ns-test='block-inline-cite'></cite>
+		<code data-ns-test='block-inline-code'></code>
+		<h1 data-ns-test='block-inline-h1'></h1>
+		<sup data-ns-test='block-inline-sup'></sup>
+		<sub data-ns-test='block-inline-sub'></sub>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
