--- a/main.html
+++ b/main.html
@@ -11,24 +11,44 @@
 	<div>
 		<button data-ns-test='block-inline-button'></button>
 		<button data-ns-test='block-inline-button'></button>
+		<p>Answer:Inline</p>
+		
 		<div data-ns-test='block-inline-div'></div>
 		<div data-ns-test='block-inline-div'></div>
+		<p>Answer:Block</p>
+		
 		<span data-ns-test='block-inline-span'></span>
 		<span data-ns-test='block-inline-span'></span>
+		<p>Answer:Inline</p>
+		
 		<p data-ns-test='block-inline-p'></p>
 		<p data-ns-test='block-inline-p'></p>
+		<p>Answer:Block</p>
+		
 		<input data-ns-test='block-inline-input' />
 		<input data-ns-test='block-inline-input' />
+		<p>Answer:Inline</p>
+		
 		<cite data-ns-test='block-inline-cite'></cite>
 		<cite data-ns-test='block-inline-cite'></cite>
+		<p>Answer:Inline</p>
+		
 		<code data-ns-test='block-inline-code'></code>
 		<code data-ns-test='block-inline-code'></code>
+		<p>Answer:Inline</p>
+		
 		<h1 data-ns-test='block-inline-h1'></h1>
 		<h1 data-ns-test='block-inline-h1'></h1>
+		<p>Answer:Block</p>
+		
 		<sup data-ns-test='block-inline-sup'></sup>
 		<sup data-ns-test='block-inline-sup'></sup>
+		<p>Answer:Inline</p>
+		
 		<sub data-ns-test='block-inline-sub'></sub>
 		<sub data-ns-test='block-inline-sub'></sub>
+		<p>Answer:Inline</p>
+		
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
