--- a/main.html
+++ b/main.html
@@ -9,45 +9,43 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-		<button data-ns-test='block-inline-button'></button>
-		<button data-ns-test='block-inline-button'></button>
-		<p>Answer:Inline</p>
+		<button data-ns-test='block-inline-button'>Test 1</button>
+		<button data-ns-test='block-inline-button'>Test 2</button><span>Answer:Inline</span>
 		
-		<div data-ns-test='block-inline-div'></div>
-		<div data-ns-test='block-inline-div'></div>
-		<p>Answer:Block</p>
+		<div data-ns-test='block-inline-div'>Test 1</div>
+		<div data-ns-test='block-inline-div'>Test 2</div><span>Answer:Block</span>
 		
-		<span data-ns-test='block-inline-span'></span>
-		<span data-ns-test='block-inline-span'></span>
-		<p>Answer:Inline</p>
 		
-		<p data-ns-test='block-inline-p'></p>
-		<p data-ns-test='block-inline-p'></p>
-		<p>Answer:Block</p>
+		<span data-ns-test='block-inline-span'>Test 1</span>
+		<span data-ns-test='block-inline-span'>Test 2</span><span>Answer:Inline</span>
 		
-		<input data-ns-test='block-inline-input' />
-		<input data-ns-test='block-inline-input' />
-		<p>Answer:Inline</p>
 		
-		<cite data-ns-test='block-inline-cite'></cite>
-		<cite data-ns-test='block-inline-cite'></cite>
-		<p>Answer:Inline</p>
+		<p data-ns-test='block-inline-p'>Test 1</p>
+		<p data-ns-test='block-inline-p'>Test 2</p><span>Answer:Block</span>
 		
-		<code data-ns-test='block-inline-code'></code>
-		<code data-ns-test='block-inline-code'></code>
-		<p>Answer:Inline</p>
 		
-		<h1 data-ns-test='block-inline-h1'></h1>
-		<h1 data-ns-test='block-inline-h1'></h1>
-		<p>Answer:Block</p>
+		<input data-ns-test='block-inline-input' value='Test 1' />
+		<input data-ns-test='block-inline-input' value='Test 2' /><span>Answer:Inline</span>
 		
-		<sup data-ns-test='block-inline-sup'></sup>
-		<sup data-ns-test='block-inline-sup'></sup>
-		<p>Answer:Inline</p>
+		<cite data-ns-test='block-inline-cite'>Test 1</cite>
+		<cite data-ns-test='block-inline-cite'>Test 2</cite><span>Answer:Inline</span>
 		
-		<sub data-ns-test='block-inline-sub'></sub>
-		<sub data-ns-test='block-inline-sub'></sub>
-		<p>Answer:Inline</p>
+		
+		<code data-ns-test='block-inline-code'>Test 1</code>
+		<code data-ns-test='block-inline-code'>Test 2</code><span>Answer:Inline</span>
+	
+		
+		<h1 data-ns-test='block-inline-h1'>Test 1</h1>
+		<h1 data-ns-test='block-inline-h1'>Test 2</h1><span>Answer:Block</span>
+		
+		
+		<sup data-ns-test='block-inline-sup'>Test 1</sup>
+		<sup data-ns-test='block-inline-sup'>Test 2</sup><span>Answer:Inline</span>
+		
+		
+		<sub data-ns-test='block-inline-sub'>Test 1</sub>
+		<sub data-ns-test='block-inline-sub'>Test 2</sub><span>Answer:Inline</span>
+		
 		
 	</div>
 	
